fix (_base.css): no overflow controls

--- a/core/static/core/css/_admin.sass
+++ b/core/static/core/css/_admin.sass
@@ -97,3 +97,7 @@ h1 img
 // Fix related field drop down width 
 .select2.select2-container
     width: 100% !important
+
+// No overflow in form groups (filters)
+.form-group
+    max-width: 100% !important
