--- a/core/static/core/css/_base.sass
+++ b/core/static/core/css/_base.sass
@@ -10,3 +10,7 @@ $color-blue-light: #7adcad
 
 .debug
     border: 1px solid red
+
+body
+    width: 100vw
+    overflow-x: hidden
